Performed database scaffolding

--- a/PizzaRestaurant.UI/PizzaRestaurant.UI.csproj
+++ b/PizzaRestaurant.UI/PizzaRestaurant.UI.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PizzaRestaurant.DataAccess\PizzaRestaurant.DataAccess.csproj" />
     <ProjectReference Include="..\PizzaRestaurant.Library\PizzaRestaurant.Library.csproj" />
   </ItemGroup>
 
