--- a/PizzaRestaurant.UI/PizzaRestaurant.UI.csproj
+++ b/PizzaRestaurant.UI/PizzaRestaurant.UI.csproj
@@ -6,6 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.Linq" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PizzaRestaurant.DataAccess\PizzaRestaurant.DataAccess.csproj" />
     <ProjectReference Include="..\PizzaRestaurant.Library\PizzaRestaurant.Library.csproj" />
   </ItemGroup>
