Added some unit tests (all pass). Fixed small bug in ConsoleApp

--- a/PizzaRestaurant.Test/PizzaRestaurant.Test.csproj
+++ b/PizzaRestaurant.Test/PizzaRestaurant.Test.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PizzaRestaurant.DataAccess\PizzaRestaurant.DataAccess.csproj" />
     <ProjectReference Include="..\PizzaRestaurant.Library\PizzaRestaurant.Library.csproj" />
   </ItemGroup>
 
